test/cli/test-generate/add-network-policy/kyverno-test.yaml
name: deny-all-traffic
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResource: generatedResource.yaml
  kind: Namespace
  policy: add-networkpolicy
  resources:
  - hello-world-namespace
  result: pass
  rule: default-deny
